Updated to ExtentReport version 5